animations fixed on small screens

--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -1,8 +1,9 @@
 .hidden {
-    transition: all 0.4s ease-in;
+    transition: 0.4s ease-in;
+    transition-property: opacity, transform;
     opacity: 0;
     filter:blur(.2rem);
-    transform: translateX(-150px);
+    transform: translateX(10vw);
 }
 
 // Gives user option to remove animation
@@ -38,7 +39,8 @@
 
 .hero__link-down.hidden {
     transform: translateX(0);
-    transition-delay: .5s;
+    transition-property: opacity;
+    transition-delay: .4s;
 }
 
 .programming__column {
@@ -54,5 +56,4 @@
         transition-delay: .4s;
         transition-duration: .4s;
     }
-
 }
